--- a/Orbital/backend/.env
+++ b/Orbital/backend/.env
@@ -1,3 +1,3 @@
-EMAIL='limyixiang2@gmail.com'
-PASSWORD='nccu dntv vyia arcg'
+EMAIL='6310smiley@gmail.com'
+PASSWORD='fudg uoow gkyb ihsw'
 CLIENT_URL='http://localhost:3000'
