Added automated Unit Testing for Models
Run `npm test` to test the 3 different models.

--- a/Orbital/backend/package.json
+++ b/Orbital/backend/package.json
@@ -21,11 +21,15 @@
   },
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "server": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "sinon": "^18.0.0"
+  }
 }
