--- a/Orbital/backend/.env
+++ b/Orbital/backend/.env
@@ -1,3 +1,3 @@
 EMAIL='6310smiley@gmail.com'
 PASSWORD='fudg uoow gkyb ihsw'
-CLIENT_URL='http://localhost:3000'
+CLIENT_URL='https://6310-smiley.vercel.app/'
