--- a/Orbital/backend/package.json
+++ b/Orbital/backend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "main": "server.js",
+    "main": "index.js",
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
@@ -20,7 +20,7 @@
         "uuid": "^9.0.1"
     },
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "nodemon index.js",
         "test": "jest",
         "server": "nodemon server"
     },
