--- a/Orbital/frontend/package.json
+++ b/Orbital/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
