--- a/Orbital/backend/package.json
+++ b/Orbital/backend/package.json
@@ -15,9 +15,11 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.6.2",
         "mongoose": "^8.3.5",
+        "node-schedule": "^2.1.1",
         "nodemailer": "^6.9.13",
         "nodemon": "^3.1.0",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "web-push": "^3.6.7"
     },
     "scripts": {
         "start": "nodemon index.js",
