Updated Integration Tests
course_test now checks if deleting a course cleanly deletes its relevant tasks.

--- a/Orbital/backend/package.json
+++ b/Orbital/backend/package.json
@@ -24,6 +24,7 @@
     "scripts": {
         "start": "nodemon index.js",
         "test": "jest",
+        "test:openHandles": "jest --detectOpenHandles",
         "server": "nodemon server"
     },
     "author": "",
