--- a/Orbital/frontend/package.json
+++ b/Orbital/frontend/package.json
@@ -10,12 +10,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.2",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.16.1",
