--- a/Orbital/backend/.env
+++ b/Orbital/backend/.env
@@ -1,3 +1,4 @@
 EMAIL='6310smiley@gmail.com'
 PASSWORD='fudg uoow gkyb ihsw'
 CLIENT_URL='https://6310-smiley.vercel.app/'
+DEV_EMAILS='limyixiang2@gmail.com,zhengxinning111@gmail.com'
